# Nathan_purple_agent

./: .dockerignore  .env.example  .gitignore  ABSTRACT.md  AGENTS.md  Makefile  README.md  SUBMIT_CARBENCH.md  amber-manifest.json5  pyproject.toml  sample.env
.github/workflows/: publish-purple.yml
archive/upstream/: README.benchmark.md
archive/upstream/green_car_bench_agent/: server.py
archive/upstream/scenarios/: scenario-docker-local.toml  scenario-ghcr.toml  scenario.toml
archive/upstream/scenarios/car-bench/: README.md  setup.sh
docs/: ATTRIBUTION.md
src/purple_car_bench_agent/: DEVELOPMENT_GUIDE.md  Dockerfile.car-bench-agent  agent_guardrails.py  car_bench_agent.py  server.py
submission/: CHECKLIST.md  PR_TEMPLATE_CARBENCH.md  SECRETS_REQUIRED.md  scenario.example.toml
tests/: test_agent_guardrails.py  test_server_smoke.py
