[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "car-bench-purple-agentbeats"
version = "0.1.0"
description = "Purple agent implementation for CAR-bench AgentBeats submission"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.5",
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
]

[tool.uv]
package = false
